--- a/CodeQualityAssessor/pom.xml
+++ b/CodeQualityAssessor/pom.xml
@@ -26,6 +26,19 @@
       <version>3.8.1</version>
     </dependency> 
     
+         <!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
+<dependency>
+    <groupId>org.apache.poi</groupId>
+    <artifactId>poi</artifactId>
+    <version>4.1.2</version>
+</dependency>
+    <!-- https://mvnrepository.com/artifact/io.dropwizard.metrics/metrics-core -->
+<dependency>
+    <groupId>io.dropwizard.metrics</groupId>
+    <artifactId>metrics-core</artifactId>
+    <version>4.1.16</version>
+</dependency>
+    
   </dependencies>
 
   <build>
