--- a/CodeQualityAssessor/pom.xml
+++ b/CodeQualityAssessor/pom.xml
@@ -20,6 +20,15 @@
   </properties>
 
   <dependencies>
+  
+  <dependency>
+    <groupId>com.github.javaparser</groupId>
+    <artifactId>javaparser-symbol-solver-core</artifactId>
+    <version>3.20.2</version>
+</dependency>
+  
+  
+  
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
