--- a/CodeQualityAssessor/pom.xml
+++ b/CodeQualityAssessor/pom.xml
@@ -27,7 +27,11 @@
     <version>3.20.2</version>
 </dependency>
   
-  
+  <dependency>
+    <groupId>org.jfree</groupId>
+    <artifactId>jfreechart</artifactId>
+    <version>1.0.19</version>
+</dependency>
   
     <dependency>
       <groupId>junit</groupId>
