--- a/CodeQualityAssessor/pom.xml
+++ b/CodeQualityAssessor/pom.xml
@@ -4,7 +4,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>48</groupId>
+  <groupId>application</groupId>
   <artifactId>CodeQualityAssessor</artifactId>
   <version>0.0.1-SNAPSHOT</version>
 
@@ -36,7 +36,7 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>3.8.1</version>
+      <version>4.12</version>
     </dependency> 
     
          <!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
@@ -60,6 +60,7 @@
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
             <version>5.3.1</version>
+            <scope>test</scope>
         </dependency>
  <dependency>
             <groupId>org.junit.jupiter</groupId>
@@ -70,6 +71,18 @@
     
     
     
+ <dependency>
+ 	<groupId>org.slf4j</groupId>
+ 	<artifactId>slf4j-api</artifactId>
+ 	            <version>1.7.5</version>
+ 	
+ </dependency>
+ <dependency>
+ 	<groupId>org.slf4j</groupId>
+ 	<artifactId>slf4j-log4j12</artifactId>
+ 	 	            <version>1.7.5</version>
+ 	
+ </dependency>
 </dependencies>
 
   <build>
@@ -99,7 +112,16 @@
     
     
     
-    
+            <plugin>
+       					  <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <version>3.8.0</version>
+        </plugin>
+        <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>2.22.1</version>
+        </plugin>
       
         <plugin>
           <artifactId>maven-clean-plugin</artifactId>
@@ -118,14 +140,7 @@
           <artifactId>maven-resources-plugin</artifactId>
           <version>3.0.2</version>
         </plugin>
-        <plugin>
-          <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.8.0</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-surefire-plugin</artifactId>
-          <version>2.22.1</version>
-        </plugin>
+
         <plugin>
           <artifactId>maven-jar-plugin</artifactId>
           <version>3.0.2</version>
