--- a/CodeQualityAssessor/pom.xml
+++ b/CodeQualityAssessor/pom.xml
@@ -66,24 +66,30 @@
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
             <version>5.3.1</version>
+            <scope>test</scope>
         </dependency>
     
+    <dependency>
+  <groupId>org.junit.vintage</groupId>
+  <artifactId>junit-vintage-engine</artifactId>
+  <version>5.2.0</version>
+  <scope>test</scope>
+  <exclusions>
+    <exclusion>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-log4j12</artifactId>
+    </exclusion>
+</exclusions> 
+</dependency>
     
     
-    
- <dependency>
- 	<groupId>org.slf4j</groupId>
- 	<artifactId>slf4j-api</artifactId>
- 	            <version>1.7.5</version>
- 	
- </dependency>
- <dependency>
- 	<groupId>org.slf4j</groupId>
- 	<artifactId>slf4j-log4j12</artifactId>
- 	 	            <version>1.7.5</version>
- 	
- </dependency>
+
 </dependencies>
+
+
+
+
+
 
   <build>
   
